@@ -1,5 +1,5 @@
 /* Pedantic checking of ELF files compliance with gABI/psABI spec.
-   Copyright (C) 2001-2010 Red Hat, Inc.
+   Copyright (C) 2001-2011 Red Hat, Inc.
    This file is part of Red Hat elfutils.
    Written by Ulrich Drepper <drepper@redhat.com>, 2001.
 
@@ -697,9 +697,10 @@ section [%2d] '%s': symbol %zu: invalid name value\n"),
 	{
 	  if (xndxdata == NULL)
 	    {
-	      ERROR (gettext ("\
+	      if (!no_xndx_warned)
+		ERROR (gettext ("\
 section [%2d] '%s': symbol %zu: too large section index but no extended section index section\n"),
-		     idx, section_name (ebl, idx), cnt);
+		       idx, section_name (ebl, idx), cnt);
 	      no_xndx_warned = true;
 	    }
 	  else if (xndx < SHN_LORESERVE)
